Diseño casi final

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-	<meta charset="uf-8"/>
-
+	<meta charset="utf-8"/>
+ 
 	<title>Sistred , Seguridad para todos...</title>
 	
 	<link rel="stylesheet" type="text/css" href="css/style.css"/>
@@ -17,50 +17,115 @@
 	</header>
 	<nav>
 		<ul>
-			<li><a href="#">Policial</a></li>
-			<li><a href="#">Delitos</a></li>
-			<li><a href="#">Transito</a></li>
-			<li><a href="#">Videos</a></li>	
+			<li id="pol"><a  href="#"></a></li>
+			<li id="del" ><a href="#"></a></li>
+			<li id="tran"><a href="#"></a></li>
+			<li id="vid" ><a  href="#"></a></li>	
 		</ul>
 	</nav>
-	<section>
+	<div id="nota">
+		Notícias
+	</div>
+	<section id="contenido">
 		<article class="noticia">
 			<figure class="not-imagen">
-				<img src="#"/>
+				<img src="images/robo.jpg"/>
 			</figure>
-			<h2 class ="not-titulo">
-				<a href="#">Titulo de noticia</a>
-			</h2>
-			<p class ="not-cuerpo">Cuerpo de la noticia debe debera ser lo sufiniente para dar uan idea de lo que queremos mostrar
-			</p>
-			<p class="not-fecha"> 
-			Ica, 23 oct 2013
-			</p>
-			<div class="not hora">
-				<a href="#" class="hora">H</a>
-				<a href="#"class="icon-hora">sol</a>
+			<div class="not-centro">
+				<h2 class ="not-titulo">
+					<a href="#">Titulo de noticia</a>
+				</h2>
+				<p class ="not-cuerpo">Cuerpo de la noticia debe 	debera ser lo sufiniente para dar uan idea de lo 	que queremos mostrar
+				</p>
+				<p class="not-fecha"> 
+				Ica, 23 oct 2013
+				</p>
+			</div>
+			<div class="not-hora">
+				<a href="#" class="hora">12:45</a>
+				<a href="#"class="icon-hora"></a>
+			</div>
+		</article>
+
+		<article class="noticia">
+			<figure class="not-imagen">
+				<img src="images/robo.jpg"/>
+			</figure>
+			<div class="not-centro">
+				<h2 class ="not-titulo">
+					<a href="#">Titulo de noticia</a>
+				</h2>
+				<p class ="not-cuerpo">Cuerpo de la noticia debe 	debera ser lo sufiniente para dar uan idea de lo 	que queremos mostrar
+				</p>
+				<p class="not-fecha"> 
+				Ica, 23 oct 2013
+				</p>
+			</div>
+			<div class="not-hora">
+				<a href="#" class="hora">12:45</a>
+				<a href="#"class="icon-hora"></a>
+			</div>
+		</article>
+
+		<article class="noticia">
+			<figure class="not-imagen">
+				<img src="images/robo.jpg"/>
+			</figure>
+			<div class="not-centro">
+				<h2 class ="not-titulo">
+					<a href="#">Titulo de noticia</a>
+				</h2>
+				<p class ="not-cuerpo">Cuerpo de la noticia debe 	debera ser lo sufiniente para dar uan idea de lo 	que queremos mostrar
+				</p>
+				<p class="not-fecha"> 
+				Ica, 23 oct 2013
+				</p>
+			</div>
+			<div class="not-hora">
+				<a href="#" class="hora">12:45</a>
+				<a href="#"class="icon-hora"></a>
+			</div>
+		</article>
+
+		<article class="noticia">
+			<figure class="not-imagen">
+				<img src="images/robo.jpg"/>
+			</figure>
+			<div class="not-centro">
+				<h2 class ="not-titulo">
+					<a href="#">Titulo de noticia</a>
+				</h2>
+				<p class ="not-cuerpo">Cuerpo de la noticia debe 	debera ser lo sufiniente para dar uan idea de lo 	que queremos mostrar
+				</p>
+				<p class="not-fecha"> 
+				Ica, 23 oct 2013
+				</p>
+			</div>
+			<div class="not-hora">
+				<a href="#" class="hora">12:45</a>
+				<a href="#"class="icon-hora"></a>
 			</div>
 		</article>
 	</section>
 	<footer>
-		<div>
-			<a href="#">face</a>
-			<a href="#">twiter</a>
-			<a href="#">youtub</a>
-			<a href="#">google</a>
+		<div id="redessociales">
+			<a id="face" href="#"></a>
+			<a id="twitter" href="#"></a><br>
+			<a id="you" href="#"></a>
+			<a id="goo" href="#"></a>
 		</div>
-		<div>
+		<div id="formulario">
 			<form>
-				<label>Nombre</label>
-				<input type="text"/>
-				<label>E-mail</label>
-				<input type="text"/>
-				<label>Contenido</label>
-				<textarea></textarea>
+				<label>Nombre</label><br>
+				<input type="text"/><br>
+				<label>E-mail</label><br>
+				<input type="text"/><br>
+				<label>Contenido</label><br>
+				<textarea></textarea><br>
 				<input type="submit" value="enviar">
 			</form>
 		</div>
-		<div>
+		<div id="registro"> 
 			<a href="#">Power by Group Mandis :P</a>
 		</div>
 	</footer>
