--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>Sistred , Seguridad para todos...</title>
 	
 	<link rel="stylesheet" type="text/css" href="css/style.css"/>
-	<link rel="stylesheet" type="text/css" href="responsive.css"/>
+	<link rel="stylesheet" type="text/css" href="css/responsive.css"/>
 
 </head>
 <body>
@@ -26,6 +26,12 @@
 	<div id="nota">
 		Notícias
 	</div>
+	<aside id="asideiz">
+			
+	</aside>
+	<aside id="asideder">
+			
+	</aside>
 	<section id="contenido">
 		<article class="noticia">
 			<figure class="not-imagen">
@@ -46,7 +52,7 @@
 				<a href="#"class="icon-hora"></a>
 			</div>
 		</article>
-
+		
 		<article class="noticia">
 			<figure class="not-imagen">
 				<img src="images/robo.jpg"/>
