--- a/index.html
+++ b/index.html
@@ -52,10 +52,9 @@
 				<a href="#"class="icon-hora"></a>
 			</div>
 		</article>
-		
-		<article class="noticia">
+<article class="noticia">
 			<figure class="not-imagen">
-				<img src="images/robo.jpg"/>
+				<img src="images/droga.jpg"/>
 			</figure>
 			<div class="not-centro">
 				<h2 class ="not-titulo">
@@ -72,10 +71,9 @@
 				<a href="#"class="icon-hora"></a>
 			</div>
 		</article>
-
 		<article class="noticia">
 			<figure class="not-imagen">
-				<img src="images/robo.jpg"/>
+				<img src="images/policia.jpg"/>
 			</figure>
 			<div class="not-centro">
 				<h2 class ="not-titulo">
@@ -92,10 +90,28 @@
 				<a href="#"class="icon-hora"></a>
 			</div>
 		</article>
-
 		<article class="noticia">
 			<figure class="not-imagen">
-				<img src="images/robo.jpg"/>
+				<img src="images/detenido.jpg"/>
+			</figure>
+			<div class="not-centro">
+				<h2 class ="not-titulo">
+					<a href="#">Titulo de noticia</a>
+				</h2>
+				<p class ="not-cuerpo">Cuerpo de la noticia debe 	debera ser lo sufiniente para dar uan idea de lo 	que queremos mostrar
+				</p>
+				<p class="not-fecha"> 
+				Ica, 23 oct 2013
+				</p>
+			</div>
+			<div class="not-hora">
+				<a href="#" class="hora">12:45</a>
+				<a href="#"class="icon-hora"></a>
+			</div>
+		</article>
+		<article class="noticia">
+			<figure class="not-imagen">
+				<img src="images/equipo.jpg"/>
 			</figure>
 			<div class="not-centro">
 				<h2 class ="not-titulo">
