--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 		<img id="menu" src="http://dl.dropboxusercontent.com/u/43775522/MenuFacebook/boton.png"/>
 		<h1>SISTRED</h1>
 		<img id ="lupa" src="http://pixabay.com/static/uploads/photo/2012/04/13/18/36/black-33206_150.png">
+		<figure id="slider">
+		 <img src="images/slider.jpg">	
+		</figure>
 	</header>
 	<nav>
 		<ul>
