--- a/index.html
+++ b/index.html
@@ -11,20 +11,17 @@
 </head>
 <body>
 	<header>
+	   <div id="buscar">
 		<img id="menu" src="http://dl.dropboxusercontent.com/u/43775522/MenuFacebook/boton.png"/>
 		<h1>SISTRED</h1>
 		<img id ="lupa" src="http://pixabay.com/static/uploads/photo/2012/04/13/18/36/black-33206_150.png">
+		</div>
 		<figure id="slider">
 		 <img src="images/slider.jpg">	
 		</figure>
 	</header>
 	<nav>
-		<ul>
-			<li id="pol"><a  href="#"></a></li>
-			<li id="del" ><a href="#"></a></li>
-			<li id="tran"><a href="#"></a></li>
-			<li id="vid" ><a  href="#"></a></li>	
-		</ul>
+		
 	</nav>
 	<div id="nota">
 		Notícias
@@ -36,6 +33,14 @@
 			
 	</aside>
 	<section id="contenido">
+		<div id="nav">
+			<ul>
+				<li id="pol"><a  href="#"></a></li>
+				<li id="del" ><a href="#"></a></li>
+				<li id="tran"><a href="#"></a></li>
+				<li id="vid" ><a  href="#"></a></li>	
+			</ul>
+		</div>
 		<article class="noticia">
 			<figure class="not-imagen">
 				<img src="images/robo.jpg"/>
