Este es el ultimo del anoche

--- a/index.html
+++ b/index.html
@@ -12,24 +12,72 @@
 <body>
 	<header>
 	   <div id="buscar">
-		<img id="menu" src="http://dl.dropboxusercontent.com/u/43775522/MenuFacebook/boton.png"/>
-		<h1>SISTRED</h1>
-		<img id ="lupa" src="http://pixabay.com/static/uploads/photo/2012/04/13/18/36/black-33206_150.png">
+			<img id="menu" src="http://dl.dropboxusercontent.com/u/43775522/MenuFacebook/boton.png"/>
+			<h1>SISTRED</h1>
+			
 		</div>
 		<figure id="slider">
 		 <img src="images/slider.jpg">	
 		</figure>
+
 	</header>
 	<nav>
 		
 	</nav>
 	<div id="nota">
 		Notícias
+			<form action="WWW.google.com">
+			<input id="txtbuscar" type="text" />
+			<img id ="lupa" src="http://pixabay.com/static/uploads/photo/2012/04/13/18/36/black-33206_150.png">
+			</form>
 	</div>
 	<aside id="asideiz">
-			
+			<div class="aside-item">
+				<h2 class="aside-titulo">Bienvenidos a Sistred!</h2>
+				<p>
+					Sistred es la nueva novedad de ica, lo mantendra seguro e infomardo
+					de las ultimas noticias y eventos que puedan ocurrir, que locura!
+				</p>
+			</div>
+			<div class="aside-item">
+				<h2 class="aside-titulo">App Sistred</h2>
+				<p>
+					Novedoza aplicacion movil, que lo mantendra seguro este donde este , 
+					es gratis pruebalo ya !
+				</p>
+				<a href="#"> Probar es gratis ---></a>
+			</div>
+			<div class="aside-item">
+				<h2 class="aside-titulo">Alguna duda ?</h2>
+				<p>
+					Ingrese a nuestra nueva red de afiliados llamando al
+					229867 :)
+				</p>
+			</div>
 	</aside>
 	<aside id="asideder">
+			<div class="aside-item">
+				<h2 class="aside-titulo">Bienvenidos a Sistred!</h2>
+				<p>
+					Sistred es la nueva novedad de ica, lo mantendra seguro e infomardo
+					de las ultimas noticias y eventos que puedan ocurrir, que locura!
+				</p>
+			</div>
+			<div class="aside-item">
+				<h2 class="aside-titulo">App Sistred</h2>
+				<p>
+					Novedoza aplicacion movil, que lo mantendra seguro este donde este , 
+					es gratis pruebalo ya !
+				</p>
+				<a href="#"> Probar es gratis ---></a>
+			</div>
+			<div class="aside-item">
+				<h2 class="aside-titulo">Alguna duda ?</h2>
+				<p>
+					Ingrese a nuestra nueva red de afiliados llamando al
+					229867 :)
+				</p>
+			</div>
 			
 	</aside>
 	<section id="contenido">
