--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 	<meta charset="utf-8"/>
  
 	<title>Sistred , Seguridad para todos...</title>
-	
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+
 	<link rel="stylesheet" type="text/css" href="css/style.css"/>
 	<link rel="stylesheet" type="text/css" href="css/responsive.css"/>
 
@@ -74,7 +75,7 @@
 			<div class="aside-item">
 				<h2 class="aside-titulo">Alguna duda ?</h2>
 				<p>
-					Ingrese a nuestra nueva red de afiliados llamando al
+	 				Ingrese a nuestra nueva red de afiliados llamando al
 					229867 :)
 				</p>
 			</div>
@@ -103,10 +104,7 @@
 				Ica, 23 oct 2013
 				</p>
 			</div>
-			<div class="not-hora">
-				<a href="#" class="hora">12:45</a>
-				<a href="#"class="icon-hora"></a>
-			</div>
+			
 		</article>
 <article class="noticia">
 			<figure class="not-imagen">
@@ -122,10 +120,7 @@
 				Ica, 23 oct 2013
 				</p>
 			</div>
-			<div class="not-hora">
-				<a href="#" class="hora">12:45</a>
-				<a href="#"class="icon-hora"></a>
-			</div>
+			
 		</article>
 		<article class="noticia">
 			<figure class="not-imagen">
@@ -141,10 +136,7 @@
 				Ica, 23 oct 2013
 				</p>
 			</div>
-			<div class="not-hora">
-				<a href="#" class="hora">12:45</a>
-				<a href="#"class="icon-hora"></a>
-			</div>
+			
 		</article>
 		<article class="noticia">
 			<figure class="not-imagen">
@@ -160,10 +152,7 @@
 				Ica, 23 oct 2013
 				</p>
 			</div>
-			<div class="not-hora">
-				<a href="#" class="hora">12:45</a>
-				<a href="#"class="icon-hora"></a>
-			</div>
+			
 		</article>
 		<article class="noticia">
 			<figure class="not-imagen">
@@ -179,10 +168,7 @@
 				Ica, 23 oct 2013
 				</p>
 			</div>
-			<div class="not-hora">
-				<a href="#" class="hora">12:45</a>
-				<a href="#"class="icon-hora"></a>
-			</div>
+			
 		</article>
 	</section>
 	<footer>
