--- a/index.html
+++ b/index.html
@@ -4,27 +4,120 @@
 	<meta charset="utf-8"/>
  
 	<title>Sistred , Seguridad para todos...</title>
+	
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
 	<link rel="stylesheet" type="text/css" href="css/style.css"/>
+	<link rel="stylesheet" type="text/css" href="css/nav.css">
+	<link rel="stylesheet" type="text/css" href="css/slidenoticia.css" />
 	<link rel="stylesheet" type="text/css" href="css/responsive.css"/>
-
+	
+	<link rel="stylesheet" type="text/css" href="css/menu.css">
+	<style type="text/css" >
+		#featured .ui-tabs-panel .info{
+			display:none;
+		}
+	</style>
+	
+	<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.2.min.js" ></script>
+	<script type="text/javascript" src="js/jquery-ui-1.7.2.custom.min.js" ></script>
+	<script type="text/javascript" src="js/slidenoticia.js" ></script>
+	<script type="text/javascript" src="js/menu.js" ></script>
+	<link rel="stylesheet" type="text/css" href="css/slider.css" />
+		<script type="text/javascript" src="js/slider.modernizer.js"></script>
+		<link href='http://fonts.googleapis.com/css?family=Economica:700,400italic' rel='stylesheet' type='text/css'>
 </head>
-<body>
+<body id="pagina">
+
 	<header>
 	   <div id="buscar">
-			<img id="menu" src="http://dl.dropboxusercontent.com/u/43775522/MenuFacebook/boton.png"/>
+	   		<div id="menuface">
+			
+			<li><a href="#">Nuestro Equipo</a></li>
+			<li><a href="#">Articulos y notas</a></li>
+			<li><a href="#">Eventos</a></li>
+			<li><a href="#">Comisarias</a></li>
+			<li><a href="#">Reportes</a></li>
+			<li><a href="#">Normas Legales</a></li>
+			<li><a href="#">Zona Multimedia</a></li>
+		    </div>
+
+			<img id="menuiz" src="http://dl.dropboxusercontent.com/u/43775522/MenuFacebook/boton.png"/>
+
 			<h1>SISTRED</h1>
 			
 		</div>
-		<figure id="slider">
-		 <img src="images/slider.jpg">	
-		</figure>
 
 	</header>
 	<nav>
+			<ul id="menu">
+			<li><a href="#">Nuestro Equipo</a></li>
+			<li><a href="#">Articulos y notas</a>
+
+				<ul>
+					<li><a href="#">submenu1</a></li>
+					<li><a href="#">submenu2</a></li>
+					<li><a href="#">sumbenu3</a></li>
+					<li><a href="#">sumbenu4</a>
+						<ul>
+							<li><a href="#">submenu1</a></li>
+							<li><a href="#">submenu2</a></li>
+							<li><a href="#">sumbenu3</a></li>
+							<li><a href="#">sumbenu4</a></li>
+						</ul>
+					</li>
+					
+				</ul>
+
+			</li>
+			<li><a href="#">eventos</a>
+				<ul>
+					<li><a href="#">submenu1</a></li>
+					<li><a href="#">submenu2</a></li>
+					<li><a href="#">sumbenu3</a></li>
+				</ul>
+			</li>
+			<li><a href="#">comisarias</a></li>
+			<li><a href="#">Reportes</a></li>
+			<li><a href="#">normas legales</a></li>
+			<li><a href="#">Zona Multimedia</a></li>
+			
+		</ul>
 		
 	</nav>
+	<div id="slider">
+		 <div id="da-slider" class="da-slider">
+				<div class="da-slide">
+					<h2>Easy management</h2>
+					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+					<a href="#" class="da-link">Read more</a>
+					<div class="da-img"><img src="images/2.png" alt="image01" /></div>
+				</div>
+				<div class="da-slide">
+					<h2>Revolution</h2>
+					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+					<a href="#" class="da-link">Read more</a>
+					<div class="da-img"><img src="images/3.png" alt="image01" /></div>
+				</div>
+				<div class="da-slide">
+					<h2>Warm welcome</h2>
+					<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane.</p>
+					<a href="#" class="da-link">Read more</a>
+					<div class="da-img"><img src="images/1.png" alt="image01" /></div>
+				</div>
+				<div class="da-slide">
+					<h2>Quality Control</h2>
+					<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+					<a href="#" class="da-link">Read more</a>
+					<div class="da-img"><img src="images/4.png" alt="image01" /></div>
+				</div>
+				<nav class="da-arrows">
+					<span class="da-arrows-prev"></span>
+					<span class="da-arrows-next"></span>
+				</nav>
+				
+			</div>	
+	</div>
 	<div id="nota">
 		Notícias
 			<form action="WWW.google.com">
@@ -81,7 +174,11 @@
 			</div>
 			
 	</aside>
+	
+	
+
 	<section id="contenido">
+
 		<div id="nav">
 			<ul>
 				<li id="pol"><a  href="#"></a></li>
@@ -106,7 +203,7 @@
 			</div>
 			
 		</article>
-<article class="noticia">
+		<article class="noticia">
 			<figure class="not-imagen">
 				<img src="images/droga.jpg"/>
 			</figure>
@@ -170,6 +267,57 @@
 			</div>
 			
 		</article>
+		<div id="eventos">
+				<h3>Eventos</h3>
+				<div id="featured" >
+			  		<ul class="ui-tabs-nav">
+	      	  			<li class="ui-tabs-nav-item ui-tabs-selected" id="nav-fragment-1"><a href="#fragment-1"><img src="images/image1-small.jpg" alt="" /><span>15+ Excellent High Speed Photographs</span></a></li>
+	      	  			<li class="ui-tabs-nav-item" id="nav-fragment-2"><a href="#fragment-2"><img src="images/image2-small.jpg" 	alt="" /><span>20 Beautiful Long Exposure Photographs</span></a></li>
+	      	  			<li class="ui-tabs-nav-item" id="nav-fragment-3"><a href="#fragment-3"><img src="images/image3-small.jpg" 	alt="" /><span>35 Amazing Logo Designs</span></a></li>
+	      	  			<li class="ui-tabs-nav-item" id="nav-fragment-4"><a href="#fragment-4"><img src="images/image4-small.jpg" 	alt="" /><span>Create a Vintage Photograph in Photoshop</span></a></li>
+	    	  		</ul>
+	    	<!--	 First Content -->
+	    			<div id="fragment-1" class="ui-tabs-panel" style="">
+						<img src="images/image1.jpg" alt="" />
+						<div class="info" >
+						<a class="hideshow" href="#" >Hide</a>
+						<h2><a href="#" >15+ Excellent High Speed Photographs</a></h2>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla tincidunt condimentum lacus. 		Pellentesque ut diam....<a href="#" >read more</a></p>
+						</div>
+	    			</div>
+		
+	    	<!--	 Second Content -->
+	    			<div id="fragment-2" class="ui-tabs-panel ui-tabs-hide" style="">
+						<img src="images/image2.jpg" alt="" />
+				 		<div class="info" >
+							<a class="hideshow" href="#" >Hide</a>
+							<h2><a href="#" >20 Beautiful Long Exposure Photographs</a></h2>
+							<p>Vestibulum leo quam, accumsan nec porttitor a, euismod ac tortor. Sed ipsum lorem, sagittis 		non 	egestas id, suscipit....<a href="#" >read more</a></p>
+				 		</div>
+	    			</div>
+		
+	    	<!--	 Third Content -->
+	    			<div id="fragment-3" class="ui-tabs-panel ui-tabs-hide" style="">
+						<img src="images/image3.jpg" alt="" />
+						 <div class="info" >
+							<a class="hideshow" href="#" >Hide</a>
+							<h2><a href="#" >35 Amazing Logo Designs</a></h2>
+							<p>liquam erat volutpat. Proin id volutpat nisi. Nulla facilisi. Curabitur facilisis sollicitudin 			ornare....<a href="#" >read more</a></p>
+	    	    		 </div>
+	    			</div>
+		
+	    	<!--	 Fourth Content -->
+	    			<div id="fragment-4" class="ui-tabs-panel ui-tabs-hide" style="">
+						<img src="images/image4.jpg" alt="" />
+						 <div class="info" >
+							<a class="hideshow" href="#" >Hide</a>
+							<h2><a href="#" >Create a Vintage Photograph in Photoshop</a></h2>
+							<p>Quisque sed orci ut lacus viverra interdum ornare sed est. Donec porta, erat eu pretium 		luctus, leo 	augue sodales....<a href="#" >read more</a></p>
+	    	    		 </div>
+	    			</div>
+
+			    </div>
+		</div>
 	</section>
 	<footer>
 		<div id="redessociales">
@@ -193,5 +341,17 @@
 			<a href="#">Power by Group Mandis :P</a>
 		</div>
 	</footer>
+
+		<script type="text/javascript" src="js/slider.js"></script>
+		<script type="text/javascript">
+			$(function() {
+			
+				$('#da-slider').cslider({
+					autoplay	: true,
+					bgincrement	: 450
+				});
+			
+			});
+		</script>
 </body>
 </html>
